# libqcow

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libqcow-wiki.ini  libqcow.ini  libqcow.nuspec  libqcow.pc.in  libqcow.spec.in  pyproject.toml.in  setup.cfg.in  syncdokan.ps1  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.github/workflows/: build_ossfuzz.yml  coverage.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h  narrow_string.h
documentation/: QEMU Copy-On-Write file format.asciidoc
dpkg/: control  copyright  copyright.in  rules
include/: Makefile.am  libqcow.h.in
include/libqcow/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcsystem/: libcsystem_definitions.h  libcsystem_getopt.h  libcsystem_signal.c  libcsystem_signal.h  libcsystem_support.h
libqcow/: Makefile.am  libqcow.c  libqcow.rc.in  libqcow_bit_stream.c  libqcow_bit_stream.h  libqcow_cluster_block.c  libqcow_cluster_block.h  libqcow_cluster_table.c  libqcow_cluster_table.h  libqcow_codepage.h  libqcow_compression.c  libqcow_compression.h  libqcow_debug.c  libqcow_debug.h  libqcow_definitions.h  libqcow_definitions.h.in  libqcow_deflate.c  libqcow_deflate.h  libqcow_encryption.c  libqcow_encryption.h  libqcow_error.c  libqcow_error.h  libqcow_extern.h  libqcow_file.c  libqcow_file.h  libqcow_file_header.c  libqcow_file_header.h  libqcow_huffman_tree.c  libqcow_huffman_tree.h  libqcow_i18n.c  libqcow_i18n.h  libqcow_io_handle.c  libqcow_io_handle.h  libqcow_libbfio.h  libqcow_libcaes.h  libqcow_libcerror.h  libqcow_libclocale.h  libqcow_libcnotify.h  libqcow_libcstring.h  libqcow_libcthreads.h  (+12 more)
m4/: libfdata.m4  yaltools.m4  zlib.m4
macosx/: Introduction.rtf.in  License.rtf  Makefile.am  Readme.rtf
macosx/libqcow.pmdoc/: 01bin.xml.in  02include.xml.in  03lib.xml.in  04share.xml.in  05python.xml.in  index.xml.in
manuals/: Makefile.am  libqcow.3  qcowinfo.1  qcowmount.1
msvscpp/: Makefile.am  libqcow.sln
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libqcow/: libqcow.vcproj
msvscpp/libqcow_dll/: libqcow_dll.vcproj
msvscpp/pyqcow/: pyqcow.vcproj
msvscpp/qcow_test_bit_stream/: qcow_test_bit_stream.vcproj
msvscpp/qcow_test_cluster_block/: qcow_test_cluster_block.vcproj
msvscpp/qcow_test_cluster_table/: qcow_test_cluster_table.vcproj
msvscpp/qcow_test_deflate/: qcow_test_deflate.vcproj
msvscpp/qcow_test_error/: qcow_test_error.vcproj
msvscpp/qcow_test_file/: qcow_test_file.vcproj
msvscpp/qcow_test_file_get_values/: qcow_test_file_get_values.vcproj
msvscpp/qcow_test_file_header/: qcow_test_file_header.vcproj
msvscpp/qcow_test_get_version/: qcow_test_get_version.vcproj
msvscpp/qcow_test_huffman_tree/: qcow_test_huffman_tree.vcproj
msvscpp/qcow_test_io_handle/: qcow_test_io_handle.vcproj
msvscpp/qcow_test_notify/: qcow_test_notify.vcproj
msvscpp/qcow_test_open_close/: qcow_test_open_close.vcproj
msvscpp/qcow_test_read/: qcow_test_read.vcproj
msvscpp/qcow_test_seek/: qcow_test_seek.vcproj
msvscpp/qcow_test_support/: qcow_test_support.vcproj
msvscpp/qcow_test_tools_info_handle/: qcow_test_tools_info_handle.vcproj
msvscpp/qcow_test_tools_output/: qcow_test_tools_output.vcproj
msvscpp/qcow_test_tools_signal/: qcow_test_tools_signal.vcproj
msvscpp/qcowinfo/: qcowinfo.vcproj
msvscpp/qcowmount/: qcowmount.vcproj
ossfuzz/: Makefile.am  file_fuzzer.cc  ossfuzz_libqcow.h  read_fuzzer.cc
pyqcow/: Makefile.am  pyqcow.c  pyqcow.h  pyqcow_encryption_types.c  pyqcow_encryption_types.h  pyqcow_error.c  pyqcow_error.h  pyqcow_file.c  pyqcow_file.h  pyqcow_file_object_io_handle.c  pyqcow_file_object_io_handle.h  pyqcow_integer.c  pyqcow_integer.h  pyqcow_libbfio.h  pyqcow_libcerror.h  pyqcow_libclocale.h  pyqcow_libcstring.h  pyqcow_libqcow.h  pyqcow_python.h  pyqcow_unused.h  setup.py.in
pyqcow-python2/: Makefile.am
pyqcow-python3/: Makefile.am
pyqcow2/: Makefile.am
pyqcow3/: Makefile.am
qcowtools/: Makefile.am  byte_size_string.c  byte_size_string.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  qcowinfo  qcowinfo.c  qcowmount  qcowmount.c  qcowoutput.c  qcowoutput.h  qcowtools_getopt.c  qcowtools_getopt.h  qcowtools_i18n.h  qcowtools_libbfio.h  qcowtools_libcdata.h  qcowtools_libcerror.h  qcowtools_libclocale.h  qcowtools_libcnotify.h  qcowtools_libcpath.h  qcowtools_libcstring.h  qcowtools_libcsystem.h  qcowtools_libqcow.h  qcowtools_libuna.h  qcowtools_output.c  qcowtools_output.h  qcowtools_signal.c  qcowtools_signal.h  qcowtools_unused.h
tests/: Makefile.am  atlocal.in  input  pkgbuild.sh  pyqcow_test_file.py  pyqcow_test_get_version.py  pyqcow_test_open_close.py  pyqcow_test_read.py  pyqcow_test_seek.py  pyqcow_test_support.py  qcow_test_bit_stream.c  qcow_test_cluster_block.c  qcow_test_cluster_table.c  qcow_test_deflate.c  qcow_test_error.c  qcow_test_extern.h  qcow_test_file.c  qcow_test_file_get_values.c  qcow_test_file_header.c  qcow_test_functions.c  qcow_test_functions.h  qcow_test_get_version.c  qcow_test_getopt.c  qcow_test_getopt.h  qcow_test_huffman_tree.c  qcow_test_io_handle.c  qcow_test_libbfio.h  qcow_test_libcerror.h  qcow_test_libclocale.h  qcow_test_libcnotify.h  qcow_test_libcpath.h  qcow_test_libcstring.h  qcow_test_libcsystem.h  qcow_test_libcthreads.h  qcow_test_libqcow.h  qcow_test_libuna.h  qcow_test_macros.h  qcow_test_memory.c  qcow_test_memory.h  qcow_test_notify.c  (+35 more)
tests/data/: file_header.1
