include_HEADERS = \
	libqcow.h

pkginclude_HEADERS = \
	libqcow/codepage.h \
	libqcow/definitions.h \
	libqcow/error.h \
	libqcow/extern.h \
	libqcow/features.h \
	libqcow/types.h

EXTRA_DIST = \
	libqcow.h.in \
	libqcow/definitions.h.in \
	libqcow/features.h.in \
	libqcow/types.h.in

DISTCLEANFILES = \
	libqcow.h \
	libqcow/definitions.h \
	libqcow/features.h \
	libqcow/types.h \
	Makefile \
	Makefile.in

