EXTRA_DIST = \
	libqcow.pmdoc/01bin.xml.in \
	libqcow.pmdoc/01bin-contents.xml \
	libqcow.pmdoc/02include.xml.in \
	libqcow.pmdoc/02include-contents.xml \
	libqcow.pmdoc/03lib.xml.in \
	libqcow.pmdoc/03lib-contents.xml \
	libqcow.pmdoc/04share.xml.in \
	libqcow.pmdoc/04share-contents.xml \
	libqcow.pmdoc/05python.xml.in \
	libqcow.pmdoc/05python-contents.xml \
	libqcow.pmdoc/index.xml \
	libqcow.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libqcow.pmdoc/01bin.xml
	/bin/rm -f libqcow.pmdoc/02include.xml
	/bin/rm -f libqcow.pmdoc/03lib.xml
	/bin/rm -f libqcow.pmdoc/04share.xml
	/bin/rm -f libqcow.pmdoc/05python.xml
	/bin/rm -f libqcow.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

