MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libqcow/libqcow.vcproj \
	libuna/libuna.vcproj \
	pyqcow/pyqcow.vcproj \
	qcow_test_cluster_block/qcow_test_cluster_block.vcproj \
	qcow_test_cluster_table/qcow_test_cluster_table.vcproj \
	qcow_test_deflate/qcow_test_deflate.vcproj \
	qcow_test_error/qcow_test_error.vcproj \
	qcow_test_file/qcow_test_file.vcproj \
	qcow_test_file_header/qcow_test_file_header.vcproj \
	qcow_test_io_handle/qcow_test_io_handle.vcproj \
	qcow_test_notify/qcow_test_notify.vcproj \
	qcow_test_support/qcow_test_support.vcproj \
	qcow_test_tools_info_handle/qcow_test_tools_info_handle.vcproj \
	qcow_test_tools_output/qcow_test_tools_output.vcproj \
	qcow_test_tools_signal/qcow_test_tools_signal.vcproj \
	qcowinfo/qcowinfo.vcproj \
	qcowmount/qcowmount.vcproj \
	zlib/zlib.vcproj \
	libqcow.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

